; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rcheevos/extr_richpresence.c_rc_richpresence_size.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rcheevos/extr_richpresence.c_rc_richpresence_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@rc_richpresence_t = common dso_local global i32 0, align 4
@self = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rc_richpresence_size(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_6__, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @rc_richpresence_t, align 4
  %5 = load i32, i32* @self, align 4
  %6 = mul nsw i32 %4, %5
  %7 = call i32 @rc_init_parse_state(%struct.TYPE_6__* %3, i32 0, i32 0, i32 0)
  %8 = load i32, i32* @rc_richpresence_t, align 4
  %9 = call i32 @RC_ALLOC(i32 %8, %struct.TYPE_6__* %3)
  store i32 %9, i32* @self, align 4
  %10 = load i32, i32* @self, align 4
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 @rc_parse_richpresence_internal(i32 %10, i8* %11, %struct.TYPE_6__* %3)
  %13 = call i32 @rc_destroy_parse_state(%struct.TYPE_6__* %3)
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  ret i32 %15
}

declare dso_local i32 @rc_init_parse_state(%struct.TYPE_6__*, i32, i32, i32) #1

declare dso_local i32 @RC_ALLOC(i32, %struct.TYPE_6__*) #1

declare dso_local i32 @rc_parse_richpresence_internal(i32, i8*, %struct.TYPE_6__*) #1

declare dso_local i32 @rc_destroy_parse_state(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
